Project

General

Profile

Bug #57340

ceph log last command fail to log by verbosity level

Added by Prashant D about 1 year ago. Updated 3 months ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

We see debug logs even if we intend to get cluster log at log level WARN.

$ ./bin/ceph log last 10 warn cluster
*** DEVELOPER MODE: setting PATH, PYTHONPATH and LD_LIBRARY_PATH ***
2022-08-30T08:30:17.197-0400 7f447b82f700 -1 WARNING: all dangerous and experimental features are enabled.
2022-08-30T08:30:17.225-0400 7f447a5cd700 -1 WARNING: all dangerous and experimental features are enabled.
2022-08-30T08:30:14.091495-0400 osd.2 (osd.2) 25 : cluster [DBG] 6.8 scrub starts
2022-08-30T08:30:14.099063-0400 osd.2 (osd.2) 26 : cluster [DBG] 6.8 scrub ok
2022-08-30T08:30:14.761149-0400 mgr.x (mgr.4110) 58 : cluster [DBG] pgmap v117: 177 pgs: 1 peering, 176 active+clean; 586 KiB data, 3.0 GiB used, 300 GiB / 303 GiB avail
2022-08-30T08:30:15.479326-0400 osd.0 (osd.0) 53 : cluster [DBG] 6.19 scrub starts
2022-08-30T08:30:15.486598-0400 osd.0 (osd.0) 54 : cluster [DBG] 6.19 scrub ok
2022-08-30T08:30:16.097777-0400 osd.2 (osd.2) 27 : cluster [DBG] 7.e scrub starts
2022-08-30T08:30:16.104896-0400 osd.2 (osd.2) 28 : cluster [DBG] 7.e scrub ok
2022-08-30T08:30:16.663414-0400 osd.1 (osd.1) 53 : cluster [DBG] 4.8 scrub starts
2022-08-30T08:30:16.670524-0400 osd.1 (osd.1) 54 : cluster [DBG] 4.8 scrub ok
2022-08-30T08:30:16.763475-0400 mgr.x (mgr.4110) 59 : cluster [DBG] pgmap v118: 177 pgs: 1 peering, 176 active+clean; 586 KiB data, 3.0 GiB used, 300 GiB / 303 GiB avail

Related issues

Copied to RADOS - Backport #57696: quincy: ceph log last command fail to log by verbosity level Resolved

History

#1 Updated by Prashant D about 1 year ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 47873

#3 Updated by Prashant D about 1 year ago

  • Status changed from Fix Under Review to Pending Backport

#4 Updated by Backport Bot about 1 year ago

  • Copied to Backport #57696: quincy: ceph log last command fail to log by verbosity level added

#5 Updated by Backport Bot about 1 year ago

  • Tags set to backport_processed

#6 Updated by Prashant D 3 months ago

  • Status changed from Pending Backport to Resolved

Also available in: Atom PDF