mon/LogMonitor: Fix log last

The ceph log last command outputs all the cluster
logs generated from logm entries at DBG level,
irrespective of their log level. We must output
cluster logs generated from logm according
to the log level specified in the log last command.

Fixes: https://tracker.ceph.com/issues/57340

Signed-off-by: Prashant D <pdhange@redhat.com>